--- a/roles/init/tasks/main.yaml
+++ b/roles/init/tasks/main.yaml
@@ -1,3 +1,26 @@
-- name: Ansible ping module
-  ansible.builtin.ping:
-  
+# - name: Ansible ping module
+#   ansible.builtin.ping:
+
+- name: Update APT cache
+  ansible.builtin.apt:
+    cache_valid_time: 86400
+
+- name: Create a user 'Juri'
+  ansible.builtin.user:
+    name: Juri
+
+- name: Set authorized key for Juri
+  ansible.posix.authorized_key:
+    user: Juri
+    state: present
+    key: https://github.com/hudolejev.keys
+
+- name: Create a user 'Roman'
+  ansible.builtin.user:
+    name: Roman
+
+- name: Set authorized key for Roman
+  ansible.posix.authorized_key:
+    user: Roman
+    state: present
+    key: https://github.com/romankuchin.keys
