--- a/infra.yaml
+++ b/infra.yaml
@@ -1,4 +1,9 @@
-  - name: Initial setup
-    hosts: all
-    roles:
-      - init
+- name: Initial setup
+  hosts: all
+  roles:
+    - init
+
+- name: Web server
+  hosts: web_servers
+  roles:
+    - nginx
