--- a/roles/nginx/tasks/main.yaml
+++ b/roles/nginx/tasks/main.yaml
@@ -2,3 +2,15 @@
   ansible.builtin.apt:
     name: nginx
     state: present
+
+- name: Copy nginx configuration
+  ansible.builtin.copy:
+    src: default
+    dest: /etc/nginx/sites-enabled/default
+  notify: Restart nginx
+
+- name: nginx service
+  ansible.builtin.service:
+    name: nginx
+    state: started
+    enabled: true
