--- a/roles/uwsgi/tasks/main.yaml
+++ b/roles/uwsgi/tasks/main.yaml
@@ -11,10 +11,11 @@
     state: directory
 
 - name: Copy uwsgi configuration for AGAMA
-  ansible.builtin.copy:
-    src: agama.ini
+  ansible.builtin.template:
+    src: agama.ini.j2
     dest: /etc/uwsgi/apps-enabled/agama.ini
     mode: 0600
+  no_log: true
   notify: Restart uWSGI
 
 - name: uWSGI service
