--- a/group_vars/all.yaml
+++ b/group_vars/all.yaml
@@ -1,3 +1,5 @@
+ansible_python_interpreter: python3
+
 #ports
 port1:
 port2:
@@ -16,3 +18,11 @@ mysql_password: !vault |
 
 #dns
 startup_name: slayble.ttu
+forwarders:
+            - 1.1.1.1
+            - 8.8.8.8
+            - 9.9.9.9
+
+nets: 
+    - 192.168.42.0/23
+    - 127.0.0.0/8
