--- a/roles/nginx/handlers/main.yaml
+++ b/roles/nginx/handlers/main.yaml
@@ -2,3 +2,8 @@
   ansible.builtin.service:
     name: nginx
     state: restarted
+
+# - name: Restart prometheus-nginx-exporter
+#   ansible.builtin.service:
+#     name: prometheus-nginx-exporter
+#     state: restarted
