--- a/roles/init/tasks/main.yaml
+++ b/roles/init/tasks/main.yaml
@@ -19,6 +19,29 @@
   ansible.builtin.template:
     src: ../templates/50-telegraf.conf
     dest: /etc/rsyslog.d/50-telegraf.conf
+  notify: Restart rsyslog
+
+- name: Create /home/backup directory 
+  file:
+    path: /home/backup
+    state: directory
+    owner: backup
+    group: backup    
+
+- name: Create a user backup
+  ansible.builtin.user:
+    name: backup
+    home: /home/backup
+    generate_ssh_key: yes
+    ssh_key_bits: 2048
+    ssh_key_file: /home/backup/.ssh/id_rsa.pub
+
+- name: Add backup server SSH key to the list of known hosts
+  ansible.builtin.template:
+    src: known_hosts.j2
+    dest: /home/backup/.ssh/known_hosts
+    owner: backup
+    group: backup
 
 # - name: Create a user 'Juri'
 #   ansible.builtin.user:
