--- a/roles/init/tasks/main.yaml
+++ b/roles/init/tasks/main.yaml
@@ -34,7 +34,6 @@
     home: /home/backup
     generate_ssh_key: yes
     ssh_key_bits: 2048
-    ssh_key_file: /home/backup/.ssh/id_rsa.pub
 
 - name: Add backup server SSH key to the list of known hosts
   ansible.builtin.template:
@@ -42,6 +41,19 @@
     dest: /home/backup/.ssh/known_hosts
     owner: backup
     group: backup
+
+- name: Create /home/backup/restore directory 
+  file:
+    path: /home/backup/restore
+    state: directory
+    owner: backup
+    group: backup
+
+- name: install duplicity
+  ansible.builtin.apt:
+    name: duplicity
+    state: present
+
 
 # - name: Create a user 'Juri'
 #   ansible.builtin.user:
