--- a/roles/grafana/handlers/main.yaml
+++ b/roles/grafana/handlers/main.yaml
@@ -1,4 +1,4 @@
 - name: Restart grafana
-  systemd:
-    name: grafana-server
-    state: restarted
+  community.docker.docker_container:
+    name: grafana
+    restart: true
