--- a/roles/agama/tasks/main.yaml
+++ b/roles/agama/tasks/main.yaml
@@ -24,6 +24,6 @@
     image: agama
     published_ports: "{{ agama_port }}:8000"
     env: 
-       AGAMA_DATABASE_URI: "mysql+pymysql://{{ mysql_user }}:{{ mysql_password }}@mysql-1/{{ mysql_database }}"
+      AGAMA_DATABASE_URI: "mysql+pymysql://{{ mysql_user }}:{{ mysql_password }}@{{ mysql_host }}/{{ mysql_database }}"
     state: started
     restart_policy: always
