--- a/roles/agama/tasks/main.yaml
+++ b/roles/agama/tasks/main.yaml
@@ -28,3 +28,14 @@
     state: started
     restart_policy: always
   with_sequence: "start=1 end={{ container_num }}"
+
+- name: Create CNAME for agama
+  community.general.nsupdate:
+    key_name: "nsupdate.key"
+    key_secret: "{{ nsupdate_key_secret }}"
+    key_algorithm: "hmac-sha256"
+    server: "{{ hostvars[groups['dns_primary'][0]]['ansible_default_ipv4']['address'] }}"
+    zone: "{{ startup_name }}"
+    record: "www-{{ inventory_hostname.split('-')[1] }}"
+    type: "CNAME"
+    value: "{{ inventory_hostname }}"
