--- a/roles/bind/tasks/main.yaml
+++ b/roles/bind/tasks/main.yaml
@@ -11,11 +11,23 @@
   loop:
     - options
   notify: Restart bind9
+  no_log: true
 
 - name: Configure dns zone 
   ansible.builtin.template:
     src: db.{{ startup_name }}.j2
     dest: /var/cache/bind/db.{{ startup_name }}
+    owner: bind
+    group: bind
+    force: no
+  notify: Restart bind9
+  when: inventory_hostname in groups['dns_primary']
+
+- name: Configure dns reverse zone 
+  ansible.builtin.template:
+    src: db.reverse.zone.j2
+    dest: /var/cache/bind/db.reverse.zone
+    force: no
   notify: Restart bind9
 
 - name: Extract bind_exporter-0.6.1 into /usr/local/bin/
@@ -46,4 +58,26 @@
     - bind9
     - prometheus-bind9-exporter
 
+- meta: flush_handlers
 
+- name: Create records for backup
+  community.general.nsupdate:
+    key_name: "nsupdate.key"
+    key_secret: "{{ nsupdate_key_secret }}"
+    key_algorithm: "hmac-sha256"
+    server: "{{ hostvars[groups['dns_primary'][0]]['ansible_default_ipv4']['address'] }}"
+    zone: "{{ startup_name }}"
+    record: "backup"
+    value: "{{ backup_ip }}"
+  when: inventory_hostname in groups['dns_primary']
+
+- name: Create CNAME for bind
+  community.general.nsupdate:
+    key_name: "nsupdate.key"
+    key_secret: "{{ nsupdate_key_secret }}"
+    key_algorithm: "hmac-sha256"
+    server: "{{ hostvars[groups['dns_primary'][0]]['ansible_default_ipv4']['address'] }}"
+    zone: "{{ startup_name }}"
+    record: "ns-{{ inventory_hostname.split('-')[1] }}"
+    type: "CNAME"
+    value: "{{ inventory_hostname }}"
