--- a/roles/grafana/tasks/main.yaml
+++ b/roles/grafana/tasks/main.yaml
@@ -45,3 +45,14 @@
     state: started
     restart_policy: always
     volumes: /opt/grafana:/etc/grafana
+
+- name: Create CNAME for grafana
+  community.general.nsupdate:
+    key_name: "nsupdate.key"
+    key_secret: "{{ nsupdate_key_secret }}"
+    key_algorithm: "hmac-sha256"
+    server: "{{ hostvars[groups['dns_primary'][0]]['ansible_default_ipv4']['address'] }}"
+    zone: "{{ startup_name }}"
+    record: "grafana"
+    type: "CNAME"
+    value: "{{ inventory_hostname }}"
