--- a/roles/haproxy/tasks/main.yaml
+++ b/roles/haproxy/tasks/main.yaml
@@ -25,3 +25,14 @@
   loop:
       - haproxy
       - prometheus-haproxy-exporter
+
+- name: Create CNAME for haproxy
+  community.general.nsupdate:
+    key_name: "nsupdate.key"
+    key_secret: "{{ nsupdate_key_secret }}"
+    key_algorithm: "hmac-sha256"
+    server: "{{ hostvars[groups['dns_primary'][0]]['ansible_default_ipv4']['address'] }}"
+    zone: "{{ startup_name }}"
+    record: "lb-{{ inventory_hostname.split('-')[1] }}"
+    type: "CNAME"
+    value: "{{ inventory_hostname }}"
