--- a/roles/influxdb/tasks/main.yaml
+++ b/roles/influxdb/tasks/main.yaml
@@ -79,4 +79,24 @@
     src: influxdb-backup
     dest: /etc/cron.d/influxdb-backup
 
+- name: Create CNAME for influxdb
+  community.general.nsupdate:
+    key_name: "nsupdate.key"
+    key_secret: "{{ nsupdate_key_secret }}"
+    key_algorithm: "hmac-sha256"
+    server: "{{ hostvars[groups['dns_primary'][0]]['ansible_default_ipv4']['address'] }}"
+    zone: "{{ startup_name }}"
+    record: "influxdb"
+    type: "CNAME"
+    value: "{{ inventory_hostname }}"
 
+- name: Create CNAME for telegraf
+  community.general.nsupdate:
+    key_name: "nsupdate.key"
+    key_secret: "{{ nsupdate_key_secret }}"
+    key_algorithm: "hmac-sha256"
+    server: "{{ hostvars[groups['dns_primary'][0]]['ansible_default_ipv4']['address'] }}"
+    zone: "{{ startup_name }}"
+    record: "telegraf"
+    type: "CNAME"
+    value: "{{ inventory_hostname }}"
