--- a/roles/init/tasks/main.yaml
+++ b/roles/init/tasks/main.yaml
@@ -5,6 +5,11 @@
   ansible.builtin.apt:
     cache_valid_time: 86400
 
+- name: Install dnspython library
+  ansible.builtin.apt:
+    name: python3-dnspython
+    state: present
+
 - name: install prometheus
   ansible.builtin.apt:
     name: prometheus
