--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -89,12 +89,6 @@
     src: mysql-backup
     dest: /etc/cron.d/mysql-backup 
 
-# - name: Update Prometheus MySQL exporter to export MySQL replication metrics
-#   ansible.builtin.template:
-#     src: prometheus-mysqld-exporter.j2
-#     dest: /etc/default/prometheus-mysqld-exporter
-#   notify: Restart mysql   
-
 - name: MySQL replication user
   community.mysql.mysql_user:
     column_case_sensitive: true
@@ -115,3 +109,14 @@
     - Reset MySQL source
     - Reset MySQL replica
 
+
+- name: Create CNAME for mysql
+  community.general.nsupdate:
+    key_name: "nsupdate.key"
+    key_secret: "{{ nsupdate_key_secret }}"
+    key_algorithm: "hmac-sha256"
+    server: "{{ hostvars[groups['dns_primary'][0]]['ansible_default_ipv4']['address'] }}"
+    zone: "{{ startup_name }}"
+    record: "db-{{ inventory_hostname.split('-')[1] }}"
+    type: "CNAME"
+    value: "{{ inventory_hostname }}"
