--- a/roles/prometheus/tasks/main.yaml
+++ b/roles/prometheus/tasks/main.yaml
@@ -14,3 +14,14 @@
     name: prometheus
     state: started
     enabled: yes
+
+- name: Create CNAME for prometheus
+  community.general.nsupdate:
+    key_name: "nsupdate.key"
+    key_secret: "{{ nsupdate_key_secret }}"
+    key_algorithm: "hmac-sha256"
+    server: "{{ hostvars[groups['dns_primary'][0]]['ansible_default_ipv4']['address'] }}"
+    zone: "{{ startup_name }}"
+    record: "prometheus"
+    type: "CNAME"
+    value: "{{ inventory_hostname }}"
